# Predictive-Adaptive-Sorting-Engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
absolute-docs/: DEVELOPMENT_GUIDE.md  PDD.md
bench/: CMakeLists.txt  bench_main.cpp  bench_results.cpp  bench_simd_profiler.cpp  gen_datasets.cpp  gen_datasets.h
docs/: BENCHMARK_SUITE.md  CI.md  PERF_TUNING.md  PHASE5.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_PHASE5.md
include/: config_loader.h  cost_model.h  cost_model_fit.h  cpu_algorithms.h  cpu_algorithms_impl.h  dispatcher.h  distributed_sort.h  feedback.h  gpu_api.h  introsort_dispatch.h  lex_complex_order.h  ml_tuner.h  pase.h  pase_bench_contract.h  pase_impl.h  pase_plan.h  profiler.h  profiler_impl.h  runtime.h  simd_profiler.h  strategies.h  threshold_tuner.h
src/: CMakeLists.txt  config_loader.cpp  cost_model.cpp  dispatcher.cpp  feedback.cpp  ml_tuner.cpp  pase.cpp  plan.cpp  profiler.cpp  runtime.cpp  simd_profiler.cpp  strategies.cpp  threshold_tuner.cpp
src/cpu/: introsort_simd.cpp  run_merge.cpp
src/distributed/: distributed_sort.cpp
src/gpu/: gpu_sort.cu  gpu_stub.cpp
tests/: CMakeLists.txt  test_config_loader.cpp  test_correctness.cpp  test_cost_model.cpp  test_gpu.cpp  test_gpu_complex.cpp  test_mpi_phase5.cpp  test_performance_regression.cpp  test_phase5_integration.cpp  test_profiler.cpp
tune/: analyze_log.py  collect_training_data.py  compare_baseline.py  fit_cost_model.py  grid_search.py  pase_csv.py  plot_results.py  requirements.txt  score_configs.py  train_ml_model.py
visuals/: README.md  generate_visuals.py  mock_bench_results.csv
